# sharedlibpp

./: .gitignore  CMakeLists.txt  README.md  pixi.toml
.github/workflows/: test-pixi.yaml  update-pixi-lockfile.yaml
examples/: CMakeLists.txt  MyMath.cpp  MyMathCustom.cpp  math_test.cpp  math_test_custom.cpp
src/: CMakeLists.txt  SharedLibrary.cpp  SharedLibraryFactory.cpp  version.cpp
src/sharedlibpp/: SharedLibrary.h  SharedLibraryClass.h  SharedLibraryClassApi.h  SharedLibraryClassFactory.h  SharedLibraryFactory.h  version.h.in
src/shlibpp/: SharedLibraryClassApi.h
